fix #65 fix breadcrumb icon alignment

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -721,6 +721,11 @@ langmenu a:hover {
     margin: 5px 0;
 }
 
+.breadcrumb .fa {
+    display: inline;
+    margin: 12px 0;
+}
+
 .separator {
     margin: 9px;
 }
